# NanoRL

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml
docs/: architecture.md  cli.md  data_plane.md  install.md  rollout.md  training.md  troubleshooting.md  weird_algebra_validation.md
nanorl/: __init__.py  cli.py  config.py
nanorl/actors/: rollout.py  train.py
nanorl/configs/: dapo_goldilocks.jsonl  qwen3_4b_grpo.yaml  qwen3_4b_grpo_fsdp.yaml  sample_prompts.jsonl
nanorl/configs/datasets/: weird_algebra_256.jsonl  weird_algebra_test64.jsonl  weird_algebra_train192.jsonl
nanorl/configs/eval_prompts/: sample_eval.jsonl
nanorl/data/: __init__.py  data_loader.py  datasets.py  redis_sink.py  sample.py  trajectory_buffer.py
nanorl/eval/: __init__.py  datasets.py  evaluator.py
nanorl/metrics/: __init__.py  dashboard.py  loggers.py
nanorl/rl/: __init__.py  advantages.py  grpo_loss.py  logprobs.py  reference_model.py  reward.py
nanorl/weights/: __init__.py  hf_to_megatron.py  megatron_to_hf.py  transport.py
scripts/: diag_fsdp_full_tensor.py  diag_train_vs_ref.py  fake_train_consumer.py  filter_prompts.py  m1_smoke.sh  m2_smoke.sh  m3_fsdp_smoke.sh  m3_smoke.sh  sanity_apply_weight_update.py  sanity_qwen3_forward.py
tests/: conftest.py  test_dashboard.py  test_grpo_loss.py  test_hf_to_megatron.py  test_megatron_to_hf.py  test_slime_rpc_loopback.py  test_trajectory_buffer.py  test_weight_manifest.py  test_weird_algebra_dataset.py
